styx-service-common